# pycalc6

./: .gitignore  LICENSE  README.md  pyproject.toml  utilassets.py
.github/workflows/: build-and-release.yml  check-code-and-testing.yml
assets/: icons.qrc  styles.qss  ui_calculadora_view.ui
assets/icons/: myIcons.qrc
src/main/: main.py
src/main/controller/: calculadora_controller.py
src/main/model/: calculadora_model.py
src/main/ui/: __init__.py
src/main/ui/ext/: calculadora_view.py
src/main/viewmodel/: calculadora_viewmodel.py
src/test/: calculadora_model_test.py
